[gd_scene load_steps=11 format=3 uid="uid://docm2db81k064"]

[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_v1yvl"]
[ext_resource type="Texture2D" uid="uid://cqgq3cy7leaw8" path="res://assets/UI/HealthBarPanel_160x41.png" id="2_765ai"]
[ext_resource type="Texture2D" uid="uid://bh6n1emb848gr" path="res://assets/UI/ValueRed_120x8.png" id="3_dabok"]
[ext_resource type="Texture2D" uid="uid://csmhcjosvmwi3" path="res://assets/UI/ValueBlue_120x8.png" id="4_0m00s"]
[ext_resource type="Texture2D" uid="uid://dubggbw83nxj" path="res://assets/UI/ValueBar_128x16.png" id="4_uprgm"]
[ext_resource type="Texture2D" uid="uid://cpadyhwhv56i6" path="res://assets/UI/BlackBigCircleBoxWithBorder_27x27.png" id="6_cn3r8"]
[ext_resource type="Texture2D" uid="uid://hvn4v5oohkvj" path="res://assets/UI/HeartIcons_32x32.png" id="7_hsa7r"]
[ext_resource type="Script" path="res://scripts/ui/enemy_indicator.gd" id="13_54vi8"]
[ext_resource type="FontFile" uid="uid://3lbgwnx18aru" path="res://assets/UI/Cubic_11.ttf" id="14_ag3pg"]
[ext_resource type="PackedScene" uid="uid://bmxb481600v1h" path="res://scenes/ui/game_over_screen.tscn" id="15_pbyqr"]

[node name="CanvasLayer(UI)" type="CanvasLayer" groups=["ui"]]
script = ExtResource("1_v1yvl")

[node name="Control_HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect_back" type="TextureRect" parent="Control_HUD"]
layout_mode = 0
offset_left = 1.0
offset_top = 589.0
offset_right = 204.0
offset_bottom = 641.0
texture = ExtResource("2_765ai")

[node name="TextureProgressBar_MP" type="TextureProgressBar" parent="Control_HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -515.0
offset_top = -29.0
offset_right = -387.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
nine_patch_stretch = true
texture_over = ExtResource("4_uprgm")
texture_progress = ExtResource("4_0m00s")

[node name="TextureProgressBar_HP" type="TextureProgressBar" parent="Control_HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -514.0
offset_top = -49.0
offset_right = -386.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
nine_patch_stretch = true
texture_over = ExtResource("4_uprgm")
texture_progress = ExtResource("3_dabok")

[node name="TextureRect_circle" type="TextureRect" parent="Control_HUD"]
layout_mode = 0
offset_left = -2.0
offset_top = 578.0
offset_right = 67.0
offset_bottom = 647.0
texture = ExtResource("6_cn3r8")

[node name="TextureRect_Heart" type="TextureRect" parent="Control_HUD"]
layout_mode = 0
offset_left = 8.0
offset_top = 588.0
offset_right = 57.0
offset_bottom = 637.0
texture = ExtResource("7_hsa7r")

[node name="Label_Gold" type="Label" parent="Control_HUD"]
layout_mode = 0
offset_left = 225.0
offset_top = 605.0
offset_right = 325.0
offset_bottom = 628.0
text = "Gold:0"

[node name="HBoxContainer(skill_icon)" type="HBoxContainer" parent="Control_HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect(skill_icon)" type="TextureRect" parent="Control_HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control(UpgradeMenu)" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel(background)" type="Panel" parent="Control(UpgradeMenu)"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="Control(UpgradeMenu)"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control(UpgradeMenu)/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control(UpgradeMenu)"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button(confirn)" type="Button" parent="Control(UpgradeMenu)/HBoxContainer"]
layout_mode = 2

[node name="Button(cancel)" type="Button" parent="Control(UpgradeMenu)/HBoxContainer"]
layout_mode = 2

[node name="Label(description)" type="Label" parent="Control(UpgradeMenu)"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TextureButton" type="TextureButton" parent="."]

[node name="TextureButton2" type="TextureButton" parent="."]

[node name="enemy_indicator" type="Control" parent="." groups=["enemy_indicator"]]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_54vi8")

[node name="Label" type="Label" parent="enemy_indicator"]
layout_mode = 0
offset_left = 554.0
offset_top = 607.0
offset_right = 592.0
offset_bottom = 621.0
theme_override_fonts/font = ExtResource("14_ag3pg")
theme_override_font_sizes/font_size = 24

[node name="GameOverScreen" parent="." instance=ExtResource("15_pbyqr")]
